--- a/package.xml
+++ b/package.xml
@@ -8,6 +8,9 @@
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="phitchawat.lu@ku.th">Phitchawat Lukkanathiti</maintainer>
+  <maintainer email="korrawit.c@ku.th">Korrawit Chaikangwan</maintainer>
+  <maintainer email="Natthaphat.wa@ku.th">Natthaphat Wattanachansit</maintainer>
+  <maintainer email="supakit.kr@gmail.com">Supakit Kriangkhajorn</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -50,11 +53,17 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>nav_msgs</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <exec_depend>nav_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
 
