--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,11 +49,11 @@ find_package(OpenCV REQUIRED)
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  TestMpData.msg
+  TestVisionData.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -70,9 +70,13 @@ find_package(OpenCV REQUIRED)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-#generate_messages(
-#   DEPENDENCIES
-#)
+generate_messages(
+    DEPENDENCIES
+    std_msgs
+    sensor_msgs
+    geometry_msgs
+    nav_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
