--- a/static_src/zeabus/opencv/CMakeLists.txt
+++ b/static_src/zeabus/opencv/CMakeLists.txt
@@ -1,6 +1,7 @@
-add_library( Opencv SHARED
+add_library( Opencv
     structure.cpp
     operations.cpp
+    convert.cpp
 )
 
 target_link_libraries( Opencv 
